[package]
name = "foundry-cli"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
foundry-common.workspace = true

alloy-dyn-abi.workspace = true
alloy-json-abi.workspace = true
alloy-primitives.workspace = true

clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
color-eyre.workspace = true
eyre.workspace = true
indicatif = "0.17"
once_cell = "1"
regex = { version = "1", default-features = false }
serde.workspace = true
strsim = "0.10"
tracing.workspace = true
yansi = "0.5"

[dev-dependencies]
tempfile = "3.7"
