[package]
name = "foundry-common"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
ethers-core.workspace = true
ethers-signers.workspace = true

alloy-dyn-abi = { workspace = true, features = ["arbitrary", "eip712"] }
alloy-json-abi.workspace = true
alloy-primitives = { workspace = true, features = [
    "serde",
    "getrandom",
    "arbitrary",
    "rlp",
] }
alloy-rpc-types.workspace = true
alloy-signer-wallet.workspace = true
alloy-sol-types.workspace = true


dunce = "1"
eyre.workspace = true
glob = "0.3"
globset = "0.4"
once_cell = "1"
reqwest = { version = "0.12", default-features = false }
serde_json.workspace = true
serde.workspace = true
thiserror = "1"
tokio = "1"
tracing.workspace = true
walkdir = "2"
yansi = "0.5"

[dev-dependencies]
foundry-macros.workspace = true
pretty_assertions.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
